# brave-core

./: DEPS  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS
.storybook/: locale.ts
app/: brave_generated_resources.grd  brave_main_delegate.cc  brave_main_delegate_browsertest.cc  generated_resources.grd  settings_strings.grdp
browser/: BUILD.gn  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_content_browser_client.h  brave_profile_prefs.cc  brave_profile_prefs_browsertest.cc
common/: BUILD.gn  pref_names.cc  pref_names.h
components/: bookmark_bar_strings.grdp  omnibox_strings.grdp
patches/: chrome-VERSION.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-java-src-org-chromium-chrome-browser-ChromeTabbedActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-bookmarks-BookmarkBridge.java.patch  chrome-android-java-src-org-chromium-chrome-browser-notifications-channels-ChannelDefinitions.java.patch  chrome-android-java-src-org-chromium-chrome-browser-partnercustomizations-HomepageManager.java.patch  chrome-android-java-src-org-chromium-chrome-browser-tabbed_mode-TabbedAppMenuPropertiesDelegate.java.patch  chrome-android-java-src-org-chromium-chrome-browser-toolbar-top-ToolbarPhone.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-flags-android-chrome_feature_list.cc.patch  chrome-browser-importer-external_process_importer_client.cc.patch  chrome-browser-importer-importer_list.cc.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-resources-settings-people_page-import_data_dialog.js.patch  chrome-browser-themes-theme_service_factory.cc.patch  chrome-browser-ui-page_info-page_info.cc.patch  chrome-browser-ui-views-extensions-extension_popup.cc.patch  chrome-browser-ui-views-profiles-incognito_menu_view.cc.patch  chrome-browser-ui-views-profiles-incognito_menu_view.h.patch  chrome-browser-ui-views-profiles-profile_menu_view.cc.patch  chrome-browser-ui-views-profiles-profile_menu_view.h.patch  chrome-browser-ui-webui-settings-import_data_handler.cc.patch  chrome-common-BUILD.gn.patch  (+17 more)
ui/webui/resources/br_elements/: BUILD.gn
ui/webui/resources/br_elements/br_toolbar/: BUILD.gn  br_toolbar_search_field.html
(+119 files in other folders)
