import("//tools/polymer/polymer.gni")

# Targets for auto-generating Polymer 3 JS Modules.

polymer_modulizer("shared_vars_css") {
  js_file = "shared_vars_css.m.js"
  html_file = "shared_vars_css.html"
  html_type = "custom-style"
}

group("polymer3_elements") {
  deps = [
    "br_toolbar:br_toolbar_module",
    "br_toolbar:br_toolbar_search_field_module",
    "br_toolbar:modulize",
    ":shared_vars_css_module",
    #"br_toolbar:cr_search_field_behavior_module",
    "//ui/webui/resources/cr_elements/cr_search_field:cr_search_field_behavior_module",
  ]
}
